--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
 title: SaibroTech
 description: > # this means to ignore newlines until "baseurl:"
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "" # the base hostname & protocol for your site
+baseurl: "site" # the subpath of your site, e.g. /blog/
+url: "https://saibrotech.github.io/site/" # the base hostname & protocol for your site
 author: Copyright &copy; 2019 - Start Bootstrap
-lang: en_US
+lang: pt_BR
 
 # Build settings
 safe: true # always trues on github-pages, disables _plugins/
