--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: SaibroTech
 description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "https://www.saibro.tech" # the base hostname & protocol for your site
-author: Copyright &copy; 2019 - Start Bootstrap
+author: Copyright &copy; 2021 - SaibroTech
 lang: pt_BR
 
 # Build settings
