--- a/_i18n/pt-BR.yml
+++ b/_i18n/pt-BR.yml
@@ -1,4 +1,11 @@
+site:
+  description: Desenvolvimento de software
+
 nav:
+  language:
+    label: Seleção de idioma
+    en: Inglês
+    pt: Português
   about: Sobre
   services: Serviços
   culture: Cultura
