CU-2t2mufn - Add a profile as an apprentice programmer on the SaibroTech site

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -103,6 +103,11 @@ members:
       subtext: Wii Sports Tennis Player
       linkedin: Gustavo Lucas Valente's LinkedIn 
       github: Gustavo Lucas Valente's GitHub
+    marianne:
+      text: Apprentice Programmer
+      subtext: Casual Table Tennis Player
+      linkedin: Marianne Avalone's LinkedIn 
+      github: Marianne Avalone's GitHub 
     nicole:
       text: Developer
       subtext: Organized Tennis Player
