--- a/_i18n/pt-BR.yml
+++ b/_i18n/pt-BR.yml
@@ -103,6 +103,11 @@ members:
       subtext: Tenista de Wii Sports
       linkedin: LinkedIn do Gustavo Lucas Valente
       github: GitHub do Gustavo Lucas Valente
+    marianne:
+      text: Aprendiz de Programação
+      subtext: Tenista de Mesa
+      linkedin: LinkedIn da Marianne Avalone
+      github: GitHub da Marianne Avalone
     nicole:
       text: Desenvolvedora
       subtext: Tenista Organizada
